Change to allow all the hosts

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ FRONTEND_URL=http://localhost:5173
 
 # Frontend variables
 VITE_API_URL=https://ai-consular.onrender.com
+
+# Security
+ALLOWED_HOSTS=*
