--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Backend variables
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=postgresql://neondb_owner:npg_YS6FQHNcLVt5@ep-super-unit-a19napxu-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 DATABASE_NAME=ai_consular
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-12345
 JWT_ALGORITHM=HS256
@@ -10,7 +10,7 @@ ENVIRONMENT=development
 FRONTEND_URL=http://localhost:5173
 
 # Frontend variables
-VITE_API_URL=https://ai-consular.onrender.com
+VITE_API_URL=http://localhost:8000
 
 # Security
 ALLOWED_HOSTS=*
